# sol_copy-trade

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.devnet.json  config.devnet.toml  config.json  config.toml  deploy.sh  docker-compose.devnet.yml  docker-compose.yml
.github/workflows/: devnet-run.yml
scripts/: run_devnet.ps1
solana-copy-bot/: Cargo.toml  Dockerfile  README.md  config.yaml
solana-copy-bot/src/: config.rs  helius.rs  main.rs  position_manager.rs  rpc_pool.rs  telegram.rs  trader.rs
src/: devnet_test.rs  error.rs  main.rs
src/config/: mod.rs  settings.rs
src/cost_tracker/: balance_monitor.rs  ledger.rs  mod.rs
src/grpc/: mod.rs  richat_client.rs  stream_handler.rs
src/health/: mod.rs
src/rpc/: hedged_client.rs  latency.rs  mod.rs
src/telegram/: alerts.rs  mod.rs
src/trading/: jito.rs  market_cap.rs  mod.rs  swap.rs  transaction_builder.rs
src/utils/: health.rs
