[package]
name = "solana-copy-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dashmap = "5"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
base64 = "0.21"
